# teplovizor

project/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  brightness_to_temperature_converter.cpp  brightness_to_temperature_converter.hpp  cmake_install.cmake  current_thermo_frame.cpp  current_thermo_frame.hpp  main.cpp  main.hpp  marked_thermo_frame.cpp  marked_thermo_frame.hpp  opencv_headers.hpp  point.cpp  point.hpp  rect_thermal_spot.cpp  rect_thermal_spot.hpp  sample  temperature_range.cpp  temperature_range.hpp  thermo_pixel.cpp  thermo_pixel.hpp  thermo_pixel_vector.cpp  thermo_pixel_vector.hpp  thermometry.cpp  thermometry.hpp  utilities.cpp  utilities.hpp
